# py-pmp-manip

./: .coverage  .gitignore  .gitmodules  README.md  TODO.txt  auto.py  conftest.py  converter.py  dependencies.txt  deps.py  example.py  extraced.json  extracted.json  last.json  log_first.lua  log_raw.lua  parsed_ast.js  parsed_ast.lua  pyproject.toml  pytest.ini  x.py
assets/: asset_formats.pmp  cb_args.pmp  dumb example.pmp  example.pmp  ext_truefantombase.pmp  ext_truefantombase_mod.pmp  ext_truefantombase_mod2.pmp  input_modes.pmp  many_dropdowns.pmp  matrix_example.sb3  monitors.pmp  monitors_other_size.pmp  music_example.pmp  testing_blocks.pmp
assets/from_online/: ONLINE 2D MAINCRAFT.pmp  color.pmp  dumb example.pmp
assets/monitors/: project.json
docs/: config.md
example_extensions/: asyncexample.js
example_extensions/gen_opcode_info/: P7BoxPhys.py  cache.json  dumbExample.py  gpusb3.py  pmControlsExpansion.py  truefantombase.py
example_extensions/js_extension/: dumbExample.js  pmControlsExpansion.js
old_database/: _transformer.py  analyzer.py  control.py  events.py  extension_makey_makey.py  operators.py
pmp_manip/: __init__.py  main.py
pmp_manip/config/: manager.py  schema.py
pmp_manip/core/: asset.py  block.py  block_interface.py  block_mutation.py  comment.py  context.py  custom_block.py  dropdown.py  enums.py  extension.py  meta.py  monitor.py  project.py  target.py  vars_lists.py
pmp_manip/ext_info_gen/: __init__.py  direct_extractor.js  direct_extractor.py  extractor.js  extractor.py  extractor_old.py  fetch_js.py  generator.py  manager.py  safe_extractor.py
pmp_manip/utility/: __init__.py  compare.py  data.py  decorators.py  dual_key_dict.py  errors.py  file.py  repr.py  validation.py  warnings.py
pypenguin/: __init__.py  asset.py  block.py  block_mutation.py  block_opcodes.py  comment.py  config.py  context.py  custom_block.py  customization_handler.py  dropdown.py  extension.py  extracted.json  important_consts.py  important_opcodes.py  main.py  meta.py  monitor.py  project.py  target.py  test.py  tree_sitter_loader.py  tts.py  vars_lists.py  x.py
pypenguin/block_info/: __init__.py  basis.py  control.py  events.py  lists.py  looks.py  motion.py  operators.py  sensing.py  sounds.py  special.py  variables.py
pypenguin/blocksets/: analyzer.py  blockset.py  motion.py
pypenguin/config/: __init__.py  basis.py  manager.py  schema.py
pypenguin/core/: __init__.py  asset.py  block.py  block_api.py  block_interface.py  block_mutation.py  comment.py  context.py  custom_block.py  dropdown.py  enums.py  extension.py  fr_to_tr_api.py  meta.py  monitor.py  project.py  target.py  vars_lists.py
pypenguin/deoptimize/: __init__.py  blocks_scripts.py  broadcasts.py  main.py  monitors.py  options.py  precompilation.py  variables_lists.py
pypenguin/ext_db_gen/: example.js  example_mod.js  extractor.py  generator.py  log.txt  scratch-stub.js
pypenguin_old/: __init__.py  compress.py  extract.py
scripts/: build_tree_sitter_lib.py  update_pyproject_toml.py
tests/: utility.py
(+177 files in other folders)
