[project]
name = "py-pmp-manip"
version = "0.1.0" # auto generated, don't edit by hand
description = "Python tool for creating, editing and inspecting Penguinmod(.pmp) and Scratch(.sb3) files."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "anonymous" }]
# auto generated, don't edit by hand:
dependencies = [
    "Pillow==11.3.0",
    "Requests==2.32.4",
    "aenum==3.1.16",
    "colorama==0.4.6",
    "jsoncomment==0.4.2",
    "lxml==6.0.0",
    "mutagen==1.47.0",
    "pydub==0.25.1",
    "pytest==8.3.5",
    "scipy==1.16.1",
    "tomlkit==0.13.3",
    "tree_sitter==0.25.0",
    "tree_sitter_javascript==0.23.1",
    "validators==0.35.0",
]

[project.urls]
"Homepage" = "https://github.com/Fritzforcode/py-pmp-manip/"
"Repository" = "https://github.com/Fritzforcode/py-pmp-manip/"
"Issues" = "https://github.com/Fritzforcode/py-pmp-manip/issues/"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pmp_manip"]

[tool.pytest.ini_options]
testpaths = ["tests"]